examples/bad/05_1_while_wrong_condition.soy
# only boolean expressions are allowed in while condition
while (3 + 3) {
    print("here");
}